overlap fix

--- a/Numia/style.css
+++ b/Numia/style.css
@@ -21,6 +21,13 @@ html {
     height: 100vh;
 }
 
+.hr{
+    background-color: #3b3b3bd1;
+    height: 1px;
+    width: 85vw;
+    margin: auto;
+}
+
 nav {
     width: 100%;
     height: 100px;
@@ -231,6 +238,7 @@ nav h1 {
 .container4 {
     height: 100vh;
     /* border: 1px solid blue; */
+    padding: 30px 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -308,9 +316,7 @@ nav h1 {
 }
 
 .container5 {
-    height: 100vh;
-    border-top: 2px solid #242424;
-    border-bottom: 2px solid #242424;
+    height: 100vh;  
     display: flex;
     justify-content: center;
     align-items: center;
